...
                  placeholder="toi@exemple.com"
                  keyboardType="email-address"
                  textContentType="emailAddress"
                  value={value}
                  onChangeText={onChange}
                  error={errors.email?.message}
                  testID="login-email-input"
                />
              )}
            />
            <Controller
              control={control}
              name="password"
...
                  placeholder="••••••••"
                  showPasswordToggle={!IS_E2E}
                  textContentType="password"
                  value={value}
                  onChangeText={onChange}
                  error={errors.password?.message}
                  testID="login-password-input"
                />
              )}
            />
          </View>

          <View className="gap-3">
            <Button
              label="Se connecter"
              size="lg"
              loading={loading}
              onPress={handleSubmit(onSubmit)}
              testID="login-submit-button"
            />
            <Button
              testID="login-forgot-password-button"
              label="Mot de passe oublié ?"
              variant="ghost"
              onPress={() => router.push("/(auth)/forgot-password")}
...
